Update bookmarklet instructions

--- a/index.html
+++ b/index.html
@@ -219,9 +219,11 @@
                 <li>Tap "Save"</li>
                 <li>To use on any webpage:
                     <ol>
+                        <li>Go to the webpage you want to scroll</li>
                         <li>Tap the bookmarks button (book icon)</li>
                         <li>Tap "Auto Scroll"</li>
                         <li>Enter speed when prompted</li>
+                        <li>Tap anywhere to stop scrolling</li>
                     </ol>
                 </li>
             </ol>
